# Firesand-AuthMatrix

./: .gitignore  AuthMatrix.spec  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Firesand_Auth_Matrix.py  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-NOTICES.txt  Makefile  README.md  SPINNER_FEATURE.md  THIRD_PARTY_LICENSES.md  build.bat  convert_icon.py  createProjectItems.py  demo_auth_matrix.json  demo_spinner.py  demoapi.json  docker-compose.yml  package.json  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  run_integration_tests.sh  setup.py  split_collections.py  test_api_spec.json  todo.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: assignments.yml  python-fullstack.agent.md  python-fullstack.md
.github/workflows/: agent-autodelegate.yml  check-version.yml  ci.yml  integration-tests.yml  publish-package.yml  publish.yml  release-please.yml  release.yml  unit-tests.yml
UI/: UI.py  __init__.py
UI/components/: DialogUtils.py  LogoHeader.py  ProgressDialog.py  SpinnerWidget.py  TabsComponent.py  __init__.py
UI/views/: Endpoints.py  Headers.py  ModernStyles.py  Results.py  SpecStore.py  Theme.py  Tokens.py
docs/: BUILD.md  ICON_IMPLEMENTATION.md  IMPORT_DIALOG_CHANGES.md  INTEGRATION_TESTING.md  PUBLISHING.md  PYSIDE6_LGPL_COMPLIANCE.md  UI_IMPLEMENTATION_SUMMARY.md  UI_MODERNIZATION.md  UI_MODERNIZATION_README.md  UI_VISUAL_CHANGES.md
scripts/: createProjectItems.py  deleteDupes.py  run_integration_tests.sh
test_api/: .dockerignore  Dockerfile  README.md  __init__.py  main.py  requirements.txt
tests/: __init__.py  conftest.py  test_export_dialog.py  test_export_postman_collections.py  test_fastapi_server.py  test_headers_delete_all.py  test_icon_implementation.py  test_import_dialog_improvements.py  test_integration.py  test_main.py  test_modern_styles.py  test_multi_collection_export_dialog.py  test_progress_dialog.py  test_progress_dialog_integration.py  test_spec_store.py  test_spinner_widget.py  test_tokens_delete_all.py  test_ui.py  test_ui_components.py  test_ui_views.py
